--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "description": "serve ace editor files from node-express",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.17.1",
     "ace-builds": "^1.4.8"
   },
   "devDependencies": {},
