--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
         "ace-builds": "^1.4.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "express-remove-route": "^1.0.0",
         "express-ws": "^4.0.0",
+        "express-swizzle-route": "github:jonathan-annett/express-swizzle-route#37c9da0d7550657843424ac7cc0adaabb3b664b2",
         "jsextensions": "github:jonathan-annett/jsextensions#ffafdf08dd686e0d13ce1b52b71d2a147c3584db",
         "remove": "^0.1.5",
         "serve-favicon": "github:jonathan-annett/serve-favicon#612c1a1b6301dc4ab0512bd467a8239e81a2af04",
