--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "express": "^4.17.1",
         "express-remove-route": "^1.0.0",
         "express-ws": "^4.0.0",
-        "express-swizzle-route": "github:jonathan-annett/express-swizzle-route#37c9da0d7550657843424ac7cc0adaabb3b664b2",
+        "get-localhost-hostname": "github:jonathan-annett/get-localhost-hostname#1de4cec9706a7fefa73fa419fab7c12fa3946582",
+        "express-swizzle-route": "github:jonathan-annett/express-swizzle-route#a717d4186ba378e289a598b662cb2c2e9f5edbde",
         "jsextensions": "github:jonathan-annett/jsextensions#564c363390d499eb6aa0c5a55fde02417be8b48d",
         "remove": "^0.1.5",
         "serve-favicon": "github:jonathan-annett/serve-favicon#612c1a1b6301dc4ab0512bd467a8239e81a2af04",
