work in progress

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
         "ace-builds": "^1.4.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
+        "font-awesome-express": "github:jonathan-annett/font-awesome-express#e7b7dc8ee7a824fe17d0dbfc47b142c8f10d90b0",
         "express-swizzle-route": "github:jonathan-annett/express-swizzle-route#83559ab73e66efb5889b4b01afeb1beba01dc753",
         "express-ws": "^4.0.0",
-        "font-awesome": "^4.7.0",
         "get-localhost-hostname": "github:jonathan-annett/get-localhost-hostname#810f032d65365f5ad82c2c9d2b6483b545ba6996",
         "jsextensions": "github:jonathan-annett/jsextensions#e57f3104fa9a2182167557a51e739423905b490c",
         "remove": "^0.1.5",
