--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
         "ace-builds": "^1.4.8",
         "body-parser": "^1.19.0",
         "express": "^4.17.1",
-        "font-awesome-express": "github:jonathan-annett/font-awesome-express#e7b7dc8ee7a824fe17d0dbfc47b142c8f10d90b0",
         "express-swizzle-route": "github:jonathan-annett/express-swizzle-route#83559ab73e66efb5889b4b01afeb1beba01dc753",
         "express-ws": "^4.0.0",
-        "get-localhost-hostname": "github:jonathan-annett/get-localhost-hostname#810f032d65365f5ad82c2c9d2b6483b545ba6996",
+        "font-awesome-express": "github:jonathan-annett/font-awesome-express#e7b7dc8ee7a824fe17d0dbfc47b142c8f10d90b0",
+        "get-localhost-hostname": "github:jonathan-annett/get-localhost-hostname#0c04e7739b86094f94300fbb1ec788181a454e32",
         "jsextensions": "github:jonathan-annett/jsextensions#656a7ccfb035a093f71d1703465e5212ac56e49f",
+        "perf_now_time": "github:jonathan-annett/perf_now_time#25cc0ce7e3e0ca5afad3ce39e7e0ac81c1c90983",
         "remove": "^0.1.5",
         "serve-favicon": "github:jonathan-annett/serve-favicon#612c1a1b6301dc4ab0512bd467a8239e81a2af04",
-        "string-diff-regex": "github:jonathan-annett/string-diff-regex#8d720ec58f800807128c454bc7ba748207546f76"
+        "string-diff-regex": "github:jonathan-annett/string-diff-regex#92ded99dce1e76ea751f0e58a9689614c4ed0416"
     },
     "devDependencies": {},
     "scripts": {
